Update and rename a.html to a.html

--- a/Program3/a.html
+++ b/Program3/a.html
@@ -77,7 +77,8 @@
     <div class="frame">
         <h2>About Us</h2>
         <p>Welcome to our website! We are dedicated to providing the best services to our customers.Learn more about our journey and values.Here is a word with a <span style="color:blue">highlight </span>effect.</p>
-        <a href:"web.png"></a>
+        <img src="https://1drv.ms/i/c/8f46255890018850/EVCIAZBYJUYggI97AAAAAAABMtpgGTAvEm7sb86bpnEFkg?e=MIkfjX" alt="fsd" height="300px" width="400px" style="padding-left: 180px;">
+        <p align="center">our team at work</p>
     </div>
     <div class="frame1">
         <h3>Latest News</h3>
