--- a/program5/a.html
+++ b/program5/a.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5a output</title>
+    <title>CSS Color References</title>
+    <style>
+        div {
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        .color-name {
+            background-color: red;
+            color: white;
+
+        }
+
+        .hex-value {
+            background-color: #1E90FF;
+            color: white;
+        }
+
+        .rgb-value {
+            background-color: rgb(34, 139, 34);
+            color: white;
+        }
+
+        .rgba-value {
+            background-color: rgba(255, 99, 71, 0.7);
+            color: black;
+        }
+
+        .hsl-value {
+            background-color: hsl(240, 100%, 50%);
+            color: white;
+        }
+
+        .hsla-value {
+            background-color: hsla(120, 60%, 70%, 0.6);
+            color: black;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>CSS  Color References</h1>
-    <h3 style="background-color:red; color:white; padding:1%;">Color Name:Red</h3>
-    <h3 style="background-color:rgb(13, 125, 125); color:white; padding:1%">HEX Value:#1E90FF</h3>
-    <h3 style="background-color:green; color:white; padding:1%">RGB Value:rgb(34,139,34)</h3>
-    <h3 style="background-color:orange; padding:1%">RGBA Value:rgba(255,99,71,0.7)</h3>
-    <h3 style="background-color:blue; color:white; padding:1%">HSL Value:hsl(240,100%,50%)</h3>
-    <h3 style="background-color:lime; padding:1%">HLSA Vaue:hlsa(120,60%,70%,0.6)</h3>
+    <h1>CSS Color References</h1>
+
+    <div class="color-name">Color Name: Red</div>
+
+    <div class="hex-value">HEX Value: #1E90FF</div>
+
+    <div class="rgb-value">RGB Value: rgb(34, 139, 34)</div>
+
+    <div class="rgba-value">RGBA Value: rgba(255, 99, 71, 0.7)</div>
+
+    <div class="hsl-value">HSL Value: hsl(240, 100%, 50%)</div>
+
+    <div class="hsla-value">HSLA Value: hsla(120, 60%, 70%, 0.6)</div>
+
 </body>
+
 </html>
